# codercub

./: .gitignore  .nojekyll  README.md  _quarto.yml  index.html  index.qmd  pyproject.toml  robots.txt  search.json  sitemap.xml
.github/workflows/: publish-quarto.yml
cmu/: Syllabus.html  Syllabus.qmd  _metadata.yml  index.html  index.qmd
cmu/01/: slides.html  slides.qmd
cmu/02/: slides.html  slides.qmd
cmu/03/: slides.html  slides.qmd
cmu/04/: slides.html  slides.qmd
cmu/05/: slides.html  slides.qmd
cmu/microbit/: slides.html  slides.qmd
days/01/: slides.html  slides.qmd
filters/: preprocess_notebook.py
labs/: Syllabus.html  Syllabus.qmd  _metadata.yml  index.html  index.qmd  pd.html  pd.qmd
labs/01/: pyproject.toml  slides.html  slides.qmd
labs/02/: pyproject.toml  slides.html  slides.qmd
labs/03/: pyproject.toml  slides.html  slides.qmd
labs/04/: pyproject.toml  slides.html  slides.qmd
labs/05/: pyproject.toml  slides.html  slides.qmd
labs/06/: pyproject.toml  slides.html  slides.qmd
labs/07/: pyproject.toml  slides.html  slides.qmd
labs/08/: pyproject.toml  slides.html  slides.qmd
labs/09/: pyproject.toml  slides.html  slides.qmd
labs/10/: pyproject.toml  slides.html  slides.qmd
labs/components/: nn.html
site_libs/bootstrap/: bootstrap-00b80456cbcbf7d380b79ef6be8ec570.min.css  bootstrap-054dfa6fe50a46f1a13ce52b5db7ef6d.min.css  bootstrap-3ad90e773abef1aa9a82c742e48c330c.min.css  bootstrap-6f3da908f3745a78714a34d904fb0ce6.min.css  bootstrap-d90c1afac775c174ac40eaf4c4b33e08.min.css  (+7 more)
theme/: dark.scss  site.scss
(+151 files in other folders)
