[project]
name = "codercub"
version = "0.1.0"
description = "Codercub Summer of Code 2026"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "quarto-cli>=1.9.37",
]

[tool.uv.workspace]
members = [
    "labs/01",
    "labs/02",
    "labs/03",
    "labs/04",
    "labs/05",
    "labs/06",
    "labs/07",
    "labs/08",
    "labs/09",
    "labs/10",
]
